feat(api-server): [RG-282, RG-641] update api cluster schema and API data source
